# Skin-Specialist

./: .gitignore  README.md  doctor_brain.py  doctor_voice.py  main.py  patient_voice.py  pyproject.toml  sample.env
ai_skin_specialist/: code.html
